--- a/index.html
+++ b/index.html
@@ -174,8 +174,6 @@
     <strong>Milan Gritta</strong><sup>1</sup>,
     <strong>Ronald Cardenas</strong><sup>1</sup>,
     <strong>Victor Prokhorov</strong><sup>1</sup>,
-    <strong>Jun Wang</strong><sup>2</sup>,
-    <strong>Gerasimos Lampouras</strong><sup>1</sup>,
     <strong>Lena Sophia Bolliger</strong><sup>6</sup>,
     <strong>Aysim Toker</strong><sup>1</sup>,
     <strong>Roy Miles</strong><sup>1</sup>,
@@ -185,7 +183,9 @@
     <strong>Ismail Elezi</strong><sup>1</sup>,
     <strong>Meiru Zhang</strong><sup>5</sup>,
     <strong>Ka Yiu Lee</strong><sup>1</sup>,
-    <strong>Guchun Zhang</strong><sup>1</sup>
+    <strong>Guchun Zhang</strong><sup>1</sup>,
+    <strong>Jun Wang</strong><sup>2</sup>,
+    <strong>Gerasimos Lampouras</strong><sup>1</sup>,
   </div>
   <div class="hero-affiliations">
     <sup>1</sup>Huawei Noah's Ark Lab, UK &nbsp;
@@ -463,7 +463,7 @@
   <section id="authors">
     <h2>Authors</h2>
     <div class="author-group">
-      <div class="author-group-label">Core Authors</div>
+      <div class="author-group-label">Main Contributors</div>
       <div class="author-names">Debjit Paul<sup>1</sup>, Daniel Murphy<sup>3</sup>, Milan Gritta<sup>1</sup>, Ronald Cardenas<sup>1</sup>, Victor Prokhorov<sup>1</sup>, Jun Wang<sup>2</sup>, Gerasimos Lampouras<sup>1</sup></div>
     </div>
     <div class="author-group">
@@ -491,12 +491,12 @@
       <pre id="bibTex">@inproceedings{paul2026deepsynth,
   title     = {{DEEPSYNTH}: A Benchmark for Deep Information Synthesis},
   author    = {Debjit Paul and Daniel Murphy and Milan Gritta and
-               Ronald Cardenas and Victor Prokhorov and Jun Wang and
-               Gerasimos Lampouras and Lena Sophia Bolliger and
+               Ronald Cardenas and Victor Prokhorov and Lena Sophia Bolliger and
                Aysim Toker and Roy Miles and Andreea-Maria Oncescu and
                Jasivan Alex Sivakumar and Philipp Borchert and
                Ismail Elezi and Meiru Zhang and Ka Yiu Lee and
-               Guchun Zhang},
+               Guchun Zhang and Jun Wang and
+               Gerasimos Lampouras},
   booktitle = {The Fourteenth International Conference on
                Learning Representations (ICLR)},
   year      = {2026},
