--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
 </nav>
 
 <div class="hero">
+  <img src="assets/octopus_logo.png" alt="DEEPSYNTH Logo" style="width: 220px; height: auto; margin-bottom: 20px; border-radius: 16px;" />
+  <br/>
   <div class="hero-venue"><i class="fas fa-award" style="margin-right:4px;"></i> Published at ICLR 2026</div>
   <h1>DEEPSYNTH</h1>
   <div class="hero-subtitle">A Benchmark for Deep Information Synthesis</div>
