--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 </nav>
 
 <div class="hero">
-  <img src="assets/octopus_logo.png" alt="DEEPSYNTH Logo" style="width: 220px; height: auto; margin-bottom: 20px; border-radius: 16px;" />
+  <img src="assets/deepsynth_octopus_logo.png" alt="DEEPSYNTH Logo" style="width: 220px; height: auto; margin-bottom: 20px; border-radius: 16px;" />
   <br/>
   <div class="hero-venue"><i class="fas fa-award" style="margin-right:4px;"></i> Published at ICLR 2026</div>
   <h1>DEEPSYNTH</h1>
