--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <div class="hero">
   <span class="venue-badge"><i class="fas fa-award"></i> &nbsp;Published at ICLR 2026</span>
   <div class="hero-title-row">
-    <img src="assets/deepsynth_octopus_logo" alt="DEEPSYNTH Logo" class="hero-logo" />
+    <img src="assets/deepsynth_octopus_logo.png" alt="DEEPSYNTH Logo" class="hero-logo" />
     <h1>DEEPSYNTH</h1>
   </div>
   <h2>A Benchmark for Deep Information Synthesis</h2>
