--- a/index.html
+++ b/index.html
@@ -103,13 +103,12 @@
 
 <!-- ===== HERO ===== -->
 <div class="hero">
-  <span class="venue-badge"><i class="fas fa-award"></i> &nbsp;Published at ICLR 2026</span>
   <div class="hero-title-row">
     <img src="assets/deepsynth_octopus_logo.png" alt="DEEPSYNTH Logo" class="hero-logo" />
     <h1>DEEPSYNTH</h1>
   </div>
   <h2>A Benchmark for Deep Information Synthesis</h2>
-
+  <span class="venue-badge"><i class="fas fa-award"></i> &nbsp;Published at ICLR 2026</span>
   <div class="hero-authors">
     <a href="#">Debjit Paul</a><sup>1</sup>,
     <a href="#">Daniel Murphy</a><sup>3</sup>,
@@ -168,7 +167,7 @@
 <section>
   <h3 class="section-title">How DEEPSYNTH Works</h3>
   <div class="figure">
-    <img src="deepsynth_figure1_final.gif" alt="DEEPSYNTH pipeline animation" />
+    <img src="assets/deepsynth_figure1_final.gif" alt="DEEPSYNTH pipeline animation" />
     <div class="figure-cap"><strong>Figure 1.</strong> A sample task illustrating the multi-step agent pipeline: web search → browse multiple sources → extract & filter data → reason → generate structured JSON answer.</div>
   </div>
 </section>
