--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <h2>A Benchmark for Deep Information Synthesis</h2>
   <span class="venue-badge"><i class="fas fa-award"></i> &nbsp;Published at ICLR 2026</span>
   <div class="hero-authors">
-    <a href="#">Debjit Paul</a><sup>1</sup>,
+    <a href="https://debjitpaul.github.io/">Debjit Paul</a><sup>1</sup>,
     <a href="#">Daniel Murphy</a><sup>3</sup>,
     <a href="#">Milan Gritta</a><sup>1</sup>,
     <a href="#">Ronald Cardenas</a><sup>1</sup>,
