--- a/index.html
+++ b/index.html
@@ -7,38 +7,38 @@
   <meta name="description" content="DEEPSYNTH: 120 challenging tasks across 67 countries evaluating LLM agents on multi-source information synthesis. ICLR 2026." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&family=Noto+Serif:wght@400;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;700&family=Noto+Sans:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <style>
-    :root { --max-w:780px; --text:#333; --text-light:#555; --text-dim:#888; --accent:#4a6cf7; --bg:#fff; --border:#e5e7eb; --surface:#f8f9fb; }
+    :root { --max-w:900px; --text:#333; --text-light:#555; --text-dim:#888; --accent:#4a6cf7; --bg:#fff; --border:#e5e7eb; --surface:#f8f9fb; }
     *{margin:0;padding:0;box-sizing:border-box;} html{scroll-behavior:smooth;}
-    body{font-family:'Noto Sans',sans-serif;color:var(--text);background:var(--bg);line-height:1.7;font-size:15px;}
+    body{font-family:'Noto Sans',sans-serif;color:var(--text);background:var(--bg);line-height:1.8;font-size:18px;}
     .container{max-width:var(--max-w);margin:0 auto;padding:0 24px;}
 
     /* Hero */
     .hero{text-align:center;padding:60px 24px 32px;}
-    .hero-logo{width:72px;border-radius:10px;vertical-align:middle;}
-    .venue-badge{display:inline-block;font-size:.75rem;font-weight:600;letter-spacing:.5px;color:var(--accent);border:1.5px solid var(--accent);padding:4px 16px;border-radius:20px;margin-bottom:20px;text-transform:uppercase;}
-    .hero-title-row{display:flex;align-items:center;justify-content:center;gap:16px;margin-bottom:4px;}
-    .hero h1{font-family:'Noto Serif',serif;font-size:2.5rem;font-weight:700;color:#222;}
-    .hero h2{font-family:'Noto Serif',serif;font-size:1.15rem;font-weight:400;color:var(--text-light);margin-bottom:28px;}
-    .hero-authors{font-size:.92rem;color:var(--text-light);line-height:2;margin-bottom:6px;}
+    .hero-logo{width:80px;border-radius:10px;vertical-align:middle;}
+    .venue-badge{display:inline-block;font-size:.8rem;font-weight:600;letter-spacing:.5px;color:var(--accent);border:1.5px solid var(--accent);padding:4px 16px;border-radius:20px;margin-bottom:20px;text-transform:uppercase;}
+    .hero-title-row{display:flex;align-items:center;justify-content:center;gap:18px;margin-bottom:6px;}
+    .hero h1{font-family:'Google Sans','Noto Sans',sans-serif;font-size:2.8rem;font-weight:700;color:#222;}
+    .hero h2{font-family:'Google Sans','Noto Sans',sans-serif;font-size:1.4rem;font-weight:400;color:var(--text-light);margin-bottom:30px;}
+    .hero-authors{font-size:1.1rem;color:var(--text-light);line-height:2.1;margin-bottom:6px;}
     .hero-authors a{color:var(--text);text-decoration:none;font-weight:500;}
     .hero-authors a:hover{color:var(--accent);}
     .hero-authors sup{color:var(--accent);font-weight:600;font-size:.7rem;}
-    .hero-affil{font-size:.8rem;color:var(--text-dim);line-height:1.8;margin-bottom:28px;}
+    .hero-affil{font-size:.9rem;color:var(--text-dim);line-height:1.8;margin-bottom:30px;}
     .hero-affil sup{color:var(--accent);font-weight:600;}
     .btn-row{display:flex;flex-wrap:wrap;justify-content:center;gap:10px;margin-bottom:12px;}
-    .btn{display:inline-flex;align-items:center;gap:6px;padding:8px 20px;border-radius:20px;font-size:.85rem;font-weight:600;text-decoration:none;border:1.5px solid var(--border);color:var(--text);background:var(--bg);transition:all .2s;}
+    .btn{display:inline-flex;align-items:center;gap:6px;padding:10px 22px;border-radius:20px;font-size:.95rem;font-weight:600;text-decoration:none;border:1.5px solid var(--border);color:var(--text);background:var(--bg);transition:all .2s;}
     .btn:hover{border-color:var(--accent);color:var(--accent);}
     .btn i{font-size:.9em;}
 
     /* Sections */
-    section{padding:36px 0;}
+    section{padding:40px 0;}
     .divider{border:none;border-top:1px solid var(--border);margin:0;}
-    h3.section-title{font-family:'Noto Serif',serif;font-size:1.4rem;font-weight:700;color:#222;text-align:center;margin-bottom:18px;}
-    .prose{color:var(--text-light);font-size:.95rem;line-height:1.8;text-align:justify;}
-    .prose p+p{margin-top:12px;}
+    h3.section-title{font-family:'Google Sans','Noto Sans',sans-serif;font-size:1.8rem;font-weight:700;color:#222;text-align:center;margin-bottom:20px;}
+    .prose{color:var(--text-light);font-size:1rem;line-height:1.8;text-align:justify;}
+    .prose p+p{margin-top:14px;}
     .prose strong{color:var(--text);}
 
     /* Figures */
@@ -103,12 +103,13 @@
 
 <!-- ===== HERO ===== -->
 <div class="hero">
+  <span class="venue-badge"><i class="fas fa-award"></i> &nbsp;Published at ICLR 2026</span>
   <div class="hero-title-row">
-    <img src="assets/deepsynth_octopus_logo.png" alt="DEEPSYNTH Logo" class="hero-logo" />
+    <img src="assets/octopus_logo.png" alt="DEEPSYNTH Logo" class="hero-logo" />
     <h1>DEEPSYNTH</h1>
   </div>
   <h2>A Benchmark for Deep Information Synthesis</h2>
-  <span class="venue-badge"><i class="fas fa-award"></i> &nbsp;Published at ICLR 2026</span>
+
   <div class="hero-authors">
     <a href="https://debjitpaul.github.io/">Debjit Paul</a><sup>1</sup>,
     <a href="#">Daniel Murphy</a><sup>3</sup>,
@@ -118,7 +119,7 @@
     <a href="#">Jun Wang</a><sup>2</sup>,
     <a href="#">Gerasimos Lampouras</a><sup>1</sup>
   </div>
-  <div class="hero-authors" style="font-size:.82rem;color:var(--text-dim);margin-bottom:4px;">
+  <div class="hero-authors" style="margin-bottom:4px;">
     <em>Dataset Contributors:</em>
     <a href="#">Lena Sophia Bolliger</a><sup>6</sup>,
     <a href="#">Aysim Toker</a><sup>1</sup>,
@@ -279,11 +280,11 @@
     <table>
       <thead><tr><th>Step</th><th class="n">DeepSeek-R1</th><th class="n">GPT-4.1</th><th class="n">GPT-5.2</th><th class="n">Prop. (%)</th></tr></thead>
       <tbody>
-        <tr><td>Step 1 (retrieval)</td><td class="n">11.2</td><td class="n">10.0</td><td class="n">4.1</td><td class="n">—</td></tr>
-        <tr><td>Step 2 (retrieval)</td><td class="n">12.4</td><td class="n">9.8</td><td class="n">2.6</td><td class="n">97.0</td></tr>
-        <tr><td>Step 3 (computation)</td><td class="n">3.9</td><td class="n">3.3</td><td class="n">0.5</td><td class="n">100.0</td></tr>
-        <tr><td>Step 4 (filtering)</td><td class="n">1.4</td><td class="n">2.4</td><td class="n">0.0</td><td class="n">100.0</td></tr>
-        <tr><td>Step 5+ (aggregation)</td><td class="n">0.0–0.2</td><td class="n">0.0</td><td class="n">0.0</td><td class="n">100.0</td></tr>
+        <tr><td>Step 1 </td><td class="n">11.2</td><td class="n">10.0</td><td class="n">4.1</td><td class="n">—</td></tr>
+        <tr><td>Step 2 </td><td class="n">12.4</td><td class="n">9.8</td><td class="n">2.6</td><td class="n">97.0</td></tr>
+        <tr><td>Step 3 </td><td class="n">3.9</td><td class="n">3.3</td><td class="n">0.5</td><td class="n">100.0</td></tr>
+        <tr><td>Step 4 </td><td class="n">1.4</td><td class="n">2.4</td><td class="n">0.0</td><td class="n">100.0</td></tr>
+        <tr><td>Step 5+ </td><td class="n">0.0–0.2</td><td class="n">0.0</td><td class="n">0.0</td><td class="n">100.0</td></tr>
         <tr><td><strong>Final Answer</strong></td><td class="n"><strong>20.1</strong></td><td class="n"><strong>18.5</strong></td><td class="n"><strong>16.7</strong></td><td class="n">—</td></tr>
       </tbody>
     </table>
