--- a/index.html
+++ b/index.html
@@ -398,13 +398,10 @@
     <button class="copy-btn" onclick="copyBib()" id="copyBtn"><i class="far fa-copy"></i> Copy</button>
     <pre id="bibTex">@inproceedings{paul2026deepsynth,
   title     = {{DEEPSYNTH}: A Benchmark for Deep Information Synthesis},
-  author    = {Debjit Paul and Daniel Murphy and Milan Gritta and
-               Ronald Cardenas and Victor Prokhorov and Lena Sophia Bolliger and
-               Aysim Toker and Roy Miles and Andreea-Maria Oncescu and
-               Jasivan Alex Sivakumar and Philipp Borchert and
-               Ismail Elezi and Meiru Zhang and Ka Yiu Lee and
-               Guchun Zhang and Jun Wang and
-               Gerasimos Lampouras},
+  author    = {Debjit Paul and Daniel Murphy and Milan Gritta and Ronald Cardenas and Victor Prokhorov 
+               and Lena Sophia Bolliger and Aysim Toker and Roy Miles and Andreea-Maria Oncescu and
+               Jasivan Alex Sivakumar and Philipp Borchert and Ismail Elezi and Meiru Zhang and 
+               Ka Yiu Lee and Guchun Zhang and Jun Wang and Gerasimos Lampouras},
   booktitle = {The Fourteenth International Conference on
                Learning Representations (ICLR)},
   year      = {2026},
