--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <div class="hero">
   
   <div class="hero-title-row">
-    <img src="assets/octopus_logo.png" alt="DEEPSYNTH Logo" class="hero-logo" />
+    <img src="assets/deepsynth_octopus_logo.png" alt="DEEPSYNTH Logo" class="hero-logo" />
     <h1>DEEPSYNTH</h1>
   </div>
   <h2>A Benchmark for Deep Information Synthesis</h2>
