--- a/index.html
+++ b/index.html
@@ -169,34 +169,35 @@
 
   <div class="hero-authors">
     <a href="https://debjitpaul.github.io/">Debjit Paul</a><sup>1</sup>,
-    <a href="#">Daniel Murphy</a><sup>3</sup>,
+    <a href="#">Daniel Murphy</a><sup>2</sup>,
     <a href="#">Milan Gritta</a><sup>1</sup>,
     <a href="#">Ronald Cardenas</a><sup>1</sup>,
     <a href="#">Victor Prokhorov</a><sup>1</sup>,
-    <a href="#">Jun Wang</a><sup>2</sup>,
+    <a href="#">Jun Wang</a><sup>3</sup>,
     <a href="#">Gerasimos Lampouras</a><sup>1</sup>
   </div>
   <div class="hero-authors" style="margin-bottom:4px;">
     <em>Dataset Contributors:</em>
-    <a href="#">Lena Sophia Bolliger</a><sup>6</sup>,
+    <a href="#">Lena Sophia Bolliger</a><sup>4</sup>,
     <a href="#">Aysim Toker</a><sup>1</sup>,
     <a href="#">Roy Miles</a><sup>1</sup>,
     <a href="#">Andreea-Maria Oncescu</a><sup>1</sup>,
     <br>
-    <a href="#">Jasivan Alex Sivakumar</a><sup>4</sup>,
+    <a href="#">Jasivan Alex Sivakumar</a><sup>5</sup>,
     <a href="#">Philipp Borchert</a><sup>1</sup>,
     <a href="#">Ismail Elezi</a><sup>1</sup>,
-    <a href="#">Meiru Zhang</a><sup>5</sup>,
+    <a href="#">Meiru Zhang</a><sup>6</sup>,
     <a href="#">Ka Yiu Lee</a><sup>1</sup>,
     <a href="#">Guchun Zhang</a><sup>1</sup>
   </div>
   <div class="hero-affil">
     <sup>1</sup>Huawei Noah's Ark Lab &ensp;
-    <sup>2</sup>UCL Centre for AI &ensp;
-    <sup>3</sup>Imperial College London &ensp;
-    <sup>4</sup>University of Sheffield &ensp;
-    <sup>5</sup>University of Cambridge &ensp;
-    <sup>6</sup>University of Zurich
+    <sup>2</sup>Imperial College London &ensp;
+    <sup>3</sup>UCL Centre for AI &ensp;
+    <sup>4</sup>University of Zurich &ensp;
+    <sup>5</sup>University of Sheffield &ensp;
+    <sup>6</sup>University of Cambridge &ensp;
+    
   </div>
   <span class="venue-badge"><i class="fas fa-award"></i> &nbsp;Published at ICLR 2026</span>
   <div class="btn-row">
