--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
   <h3 class="section-title">Abstract</h3>
   <div class="prose">
     <p>Large language model (LLM)-based agents are increasingly used to solve complex tasks involving tool use, such as web browsing, code execution, and data analysis. However, current evaluation benchmarks do not adequately assess their ability to solve real-world tasks that require synthesizing information from multiple sources and inferring insights beyond simple fact retrieval.</p>
-    <p>We introduce <strong>DEEPSYNTH</strong>, a novel benchmark of <strong>120 tasks</strong> across <strong>7 domains</strong> and <strong>67 countries</strong>, designed to evaluate agents on realistic, time-consuming problems that combine information gathering, synthesis, and structured reasoning. When evaluated on DEEPSYNTH, <strong>9 state-of-the-art LLMs and deep research agents achieve a maximum F1 of only 8.97</strong>. Our analysis reveals that current agents struggle with hallucinations and reasoning over large information spaces.</p>
+    <p>We introduce <strong>DEEPSYNTH</strong>, a novel benchmark of <strong>120 tasks</strong> across <strong>7 domains</strong> and <strong>67 countries</strong>, designed to evaluate agents on realistic, time-consuming problems that combine information gathering, synthesis, and structured reasoning. When evaluated on DEEPSYNTH, <strong>11</strong> state-of-the-art LLMs and deep research agents achieve a maximum F1 of only 8.97</strong>. Our analysis reveals that current agents struggle with hallucinations and reasoning over large information spaces.</p>
   </div>
 </section>
 
