--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
 
 <footer>
   DEEPSYNTH &copy; 2026. Built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template">Academic Project Page Template</a>.
+  Disclaimer: This open source project is not an official Huawei product, Huawei is not expected to provide support for this project
 </footer>
 
 <script>
