--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
   </div>
 
   <div class="callout red">
-    <strong>Key finding:</strong> Under strict exact-match, almost all LLM baselines score zero. The best agent (o3-deep-research) solves only 3 of 120 tasks exactly, confirming that parametric knowledge alone is insufficient.
+    <strong>Key finding:</strong> Under strict exact-match, almost all LLM baselines score zero. GPT-5.2-Pro achieves the highest F1 score of 8.70, and both GPT-5.2-Pro and DeepSeek-R1-Reasoner achieve the highest LLM Judge score of 6.67, indicating substantial room for improvement.
   </div>
 </section>
 
